--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="title"></div>
 
   <div class="cowsay" id="cowsay">
     Loading...
   </div>
 
+  <div class="date-navigation">
+    <button id="prevDay">&lt;</button>
+    <div id="date"></div>
+    <button id="nextDay">&gt;</button>
+  </div>
   <script src="cow.js"></script>
 </body>
 </html>
